# f1-24-telemetry

./: .gitignore  Cargo.toml  README.md  biome.jsonc  f1_telemetry_20241229_170749.json  package.json  pnpm-lock.yaml  turbo.json
scripts/: create_migration.sh
src/: main.rs
src/db/: mod.rs
src/f1_telemetry_api/: mod.rs
src/f1_telemetry_api/events/: mod.rs
src/f1_telemetry_api/routes/: events.rs  session.rs
src/f1_telemetry_client/: mod.rs
src/f1_telemetry_client/packets/: car_damage.rs  car_motion_data.rs  car_setups.rs  car_status.rs  car_telemetry.rs  event.rs  final_classification.rs  header.rs  lap_data.rs  lobby_info.rs  mod.rs  motion_ex.rs  participants.rs  session_data.rs  time_trial.rs  tyre_sets.rs
