[package]
name = "f1-24-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
clap = { version = "4.5.23", features = ["derive"] }
poem = "3.1.5"
poem-openapi = "5.1.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
libsql = "0.6.0"
